--- a/RestoApp/src/app/main-dashboard/main-dashboard.component.html
+++ b/RestoApp/src/app/main-dashboard/main-dashboard.component.html
@@ -15,14 +15,29 @@
                         </mat-menu>
                     </mat-card-title>
                 </mat-card-header>
-                <mat-card-content class="dashboard-card-content">
-                    <div>Card Content Here</div>
+                <mat-card-content class="dashboard-card-content" *ngIf="card.id === 1">
+                    <div></div>
+                </mat-card-content>
+                <mat-card-content class="dashboard-card-content" *ngIf="card.id === 2">
+                    <div *ngFor="let vegan of vegans">
+                        <h3>{{ vegan.title }}</h3>
+                        <span>{{ vegan.description }} </span>
+                        <span>{{ vegan.price | currency: 'EUR' }}</span>
+                    </div>
+                </mat-card-content>
+                <mat-card-content class="dashboard-card-content" *ngIf="card.id === 3">
+                    <div *ngFor="let burger of burgers">
+                        <h3>{{ burger.title }}</h3>
+                        <p>{{ burger.description }}</p>
+                    </div>
+                </mat-card-content>
+                <mat-card-content class="dashboard-card-content" *ngIf="card.id === 4">
+                    <div *ngFor="let dessert of desserts">
+                        <h3>{{ dessert.title }}</h3>
+                        <p>{{ dessert.description }}</p>
+                    </div>
                 </mat-card-content>
             </mat-card>
         </mat-grid-tile>
     </mat-grid-list>
-</div>
-
-<div *ngFor="let burger of burgers">
-    {{ burger.title }}
 </div>
