--- a/RestoApp/src/app/reservation/reservation.component.html
+++ b/RestoApp/src/app/reservation/reservation.component.html
@@ -1,1 +1,8 @@
-<p>reservation works!</p>
+<form formGroup="reservationFrom">
+    <mat-form-field>
+        <mat-label></mat-label>
+        <input matInput [matDatepicker]="picker" placeholder="Choisir une date" formControlName="date" />
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker startView="year" [startAt]="date"></mat-datepicker>
+    </mat-form-field>
+</form>
