--- a/RestoApp/src/app/reservation/reservation.component.html
+++ b/RestoApp/src/app/reservation/reservation.component.html
@@ -1,28 +1,44 @@
-<form [formGroup]="reservationFrom">
-    <mat-form-field>
-        <mat-label></mat-label>
-        <input matInput [matDatepicker]="picker" placeholder="Choisir une date" formControlName="date" />
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker startView="year" [startAt]="date"></mat-datepicker>
-    </mat-form-field>
+<div *ngIf="!isScheduleOk">
+    <form [formGroup]="reservationFrom" (submit)="saveDate()">
+        <mat-form-field>
+            <mat-label></mat-label>
+            <input matInput [matDatepicker]="picker" placeholder="Choisir une date" formControlName="date" />
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker startView="year" [startAt]="date"></mat-datepicker>
+        </mat-form-field>
 
-    <h4>Select time</h4>
-    <mat-form-field>
-        <mat-label> hours choose</mat-label>
-        <mat-select formControlName="time">
-            <mat-option *ngFor="let time of timeOptions" [value]="time">
-                {{ time }}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
+        <h4>Select time</h4>
+        <mat-form-field>
+            <mat-label> hours choose</mat-label>
+            <mat-select formControlName="time">
+                <mat-option *ngFor="let time of timeOptions" [value]="time">
+                    {{ time }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
 
-    <h4>How many people</h4>
-    <mat-form-field>
-        <mat-label> numbers choose</mat-label>
-        <mat-select formControlName="number">
-            <mat-option *ngFor="let p of numbersOptions" [value]="p">
-                {{ p }}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-</form>
+        <h4>How many people</h4>
+        <mat-form-field>
+            <mat-label> numbers choose</mat-label>
+            <mat-select formControlName="number">
+                <mat-option *ngFor="let person of numbersOptions" [value]="person">
+                    {{ person }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <button mat-button type="submit">Confirm Hours</button>
+    </form>
+</div>
+
+<!-- la variable f crée avec le dièse permet de recuperer ensuite la valeur -->
+<div *ngIf="isScheduleOk">
+    <form #form="ngForm" (submit)="finalizeReservation(form.value)">
+        <mat-form-field
+            ><input matInput type="text" name="firstName" [(ngModel)]="client.firstName" placeholder="FirstName"
+        /></mat-form-field>
+        <mat-form-field> <input matInput type="text" name="Name" [(ngModel)]="client.Name" placeholder="Name" /> </mat-form-field>
+        <mat-form-field> <input matInput type="text" name="email" [(ngModel)]="client.email" placeholder="email" /> </mat-form-field>
+        <mat-form-field> <input matInput type="text" name="phone" [(ngModel)]="client.phone" placeholder="Phone Number" /> </mat-form-field>
+        <button mat-button type="submit">Book Now</button>
+    </form>
+</div>
