--- a/RestoApp/src/app/main-nav/main-nav.component.html
+++ b/RestoApp/src/app/main-nav/main-nav.component.html
@@ -12,6 +12,7 @@
             <a mat-list-item routerLink="/">Acceuil</a>
             <a mat-list-item routerLink="/menu">Carte</a>
             <a mat-list-item routerLink="/reservation">Réserver</a>
+            <a mat-list-item routerLink="/schedule">Program</a>
             <a mat-list-item routerLink="/contact">Contact</a>
         </mat-nav-list>
     </mat-sidenav>
