http client module

--- a/RestoApp/src/app/schedule/schedule.component.html
+++ b/RestoApp/src/app/schedule/schedule.component.html
@@ -1,3 +1,5 @@
 <div>
-    <input type="text" [formControl]="searchInput" name="" id="" />
+    <input type="text" [formControl]="searchInput" placeholder="search about ..." />
+    <br />
+    {{ result }}
 </div>
