--- a/RestoApp/src/app/contact/contact.component.html
+++ b/RestoApp/src/app/contact/contact.component.html
@@ -1,1 +1,5 @@
 <p>contact works!</p>
+
+<app-phone [user]="standard"></app-phone>
+<app-phone [user]="standard2"></app-phone>
+<app-phone [user]="standard3"></app-phone>
